# zipcode-japan

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
001/: 0000.json  0010.json  0011.json  0012.json  0013.json  0014.json  0015.json  0016.json  0017.json  0018.json  0019.json  0020.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0031.json  0032.json  0033.json  0034.json  0035.json  0036.json  0037.json  0038.json  0039.json  0040.json  0045.json  0901.json  0902.json  0903.json  0904.json  0905.json  0906.json  0907.json  (+20 more)
002/: 0851.json  0852.json  0853.json  0854.json  0855.json  0856.json  0857.json  0858.json  0859.json  0860.json  0861.json  0865.json  8001.json  8002.json  8003.json  8004.json  8005.json  8006.json  8007.json  8008.json  8009.json  8010.json  8011.json  8012.json  8021.json  8022.json  8023.json  8024.json  8025.json  8026.json  8027.json  8028.json  8029.json  8030.json  8031.json  8032.json  8033.json  8034.json  8035.json  8036.json  (+29 more)
003/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0011.json  0012.json  0013.json  0021.json  0022.json  0023.json  0024.json  0025.json  0026.json  0027.json  0028.json  0029.json  0030.json  0801.json  0802.json  0803.json  0804.json  0805.json  0806.json  0807.json  0808.json  0809.json  0811.json  0812.json  0813.json  0814.json  0821.json  0822.json  0823.json  0824.json  0825.json  0826.json  0827.json  (+32 more)
004/: 0000.json  0001.json  0002.json  0003.json  0004.json  0005.json  0006.json  0007.json  0011.json  0012.json  0013.json  0014.json  0015.json  0021.json  0022.json  0031.json  0032.json  0033.json  0039.json  (+70 more)
(+300776 files in other folders)
