[package]
authors = ["Yuuki Toriyama<github@toriyama.dev>"]
description = "日本郵政の郵便番号CSVデータを変換するツール"
edition = "2021"
license = "MIT"
name = "zipcode-japan"
repository = "https://github.com/YUUKIToriyama/zipcode-japan"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
encoding_rs = "0.8.31"
reqwest = "0.11.11"
serde_json = "1.0.82"
tokio = {version = "1.20.1", features = ["full"]}
zip = "0.6.2"
