[package]
authors = ["Yuuki Toriyama<github@toriyama.dev>"]
description = "日本郵政の郵便番号CSVデータを変換するツール"
edition = "2021"
license = "MIT"
name = "zipcode-japan"
repository = "https://github.com/YUUKIToriyama/zipcode-japan"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
encoding_rs = "0.8.31"
reqwest = "0.11.11"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.82"
tokio = {version = "1.20.1", features = ["full"]}
zip = "0.6.2"
