[package]
authors = ["Yuuki Toriyama<github@toriyama.dev>"]
description = "日本郵政の郵便番号CSVデータを変換するツール"
edition = "2021"
license = "MIT"
name = "zipcode-japan"
repository = "https://github.com/YUUKIToriyama/zipcode-japan"
version = "0.3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.44.2", features = ["lazy"] }
reqwest = "0.12.5"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.82"
tokio = {version = "1.20.1", features = ["full"]}
